syntax = "proto3";

package tensorflow.serving;
option cc_enable_arenas = true;

import "tensorflow/core/framework/tensor.proto";
import "tensorflow_serving/apis/model.proto";

// PredictRequest specifies which TensorFlow model to run, as well as
// how inputs are mapped to tensors and how outputs are filtered before
// returning to user.
message FilePredictRequest {
  // Model Specification. If version is not specified, will use the latest
  // (numerical) version.
  ModelSpec model_spec = 1;

  // Input tensors.
  string input_file_path = 2;
  string output_file_path = 3;

  // Output filter.
  // Names specified are alias names. The mapping from aliases to real output
  // tensor names is stored in the SavedModel export as a prediction
  // SignatureDef under the 'outputs' field.
  // Only tensors specified here will be run/fetched and returned, with the
  // exception that when none is specified, all tensors specified in the
  // named signature will be run/fetched and returned.
  repeated string output_filter = 4;
}

// Response for PredictRequest on successful run.
message FilePredictResponse {
  // Effective Model Specification used to process PredictRequest.
  ModelSpec model_spec = 1;
  string output_file_path = 2;    
}


// this is contents of data file
message TensorMap {
  map<string, TensorProto> tensor_map = 1;
}
